# conjure-blocks

./: README.md  bundle.js  index.html  package-lock.json  package.json  testing.md  webpack.config.js
.github/workflows/: deploy.yml  docs.yml  preview.yml  static.yml  test.yml
conjure-blocks/: book.toml
docs/: 404.html  book.toml  intro.html  print.html  searcher-c2a407aa.js  searchindex-e4ab7a7c.js  searchindex-e8be1b63.js  toc-2b292715.js  toc.html
docs/blocks/: FALSE.html  TRUE.html  abs_value.html  additive_op.html  and_expr.html  bool_domain.html  bracket_expr.html  comp_op.html  comparison.html  constraint_list.html  domain_expr.html  dominance_relation.html  exponent.html  expr_list.html  find_statement.html  from_solution.html  (+17 more)
main/: bundle.js
src/: customRenderer.js  grammar.js  grammar2.js  index.css  index.html  index.js  jsonToolbox.js  parsing.js  predefinedFunctions.js  serialization.js  toolbox.js  tooltips.js  tree-sitter-essence.wasm  tree-sitter-essence_parser.wasm
src/tree-sitter-essence/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
src/tree-sitter-essence/bindings/c/: tree-sitter-essence-parser.pc.in
src/tree-sitter-essence/bindings/go/: binding.go  binding_test.go
src/tree-sitter-essence/bindings/node/: binding.cc  index.d.ts  index.js
src/tree-sitter-essence/bindings/python/tests/: test_binding.py
src/tree-sitter-essence/bindings/python/tree_sitter_essence_parser/: __init__.py  binding.c
src/tree-sitter-essence/bindings/rust/: build.rs  lib.rs
src/tree-sitter-essence/bindings/swift/TreeSitterEssenceParser/: essence_parser.h
src/tree-sitter-essence/bindings/swift/TreeSitterEssenceParserTests/: TreeSitterEssenceParserTests.swift
src/tree-sitter-essence/src/: grammar.json  node-types.json  parser.c
(+96 files in other folders)
