[package]
name = "tree-sitter-essence-parser"
description = " Parser for constraint programming language Essence, for use with block editor Conjure-Blocks"
version = "0.1.0"
authors = ["Nadine Martin, Jamie Melton, Leia Young <nm275@st-andrews.ac.uk>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "essence-parser"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/conjure-cp/conjure-blocks"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
