[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-essence-parser"
description = " Parser for constraint programming language Essence, for use with block editor Conjure-Blocks"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "essence-parser"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Nadine Martin, Jamie Melton, Leia Young", email = "nm275@st-andrews.ac.uk" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/conjure-cp/conjure-blocks"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
